fix spacing between food thumbnails

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -122,7 +122,7 @@
 }
 
 #galleryImg {
-    margin-bottom: -10px;
+    margin-bottom: 10px;
     object-fit: scale-down;
     max-height: 800px;
 }
